fixed gap in wider screens

--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ main svg {
         justify-content: center;
         align-items: center;
         line-height: 1.25;
-        gap: 1.5rem;
+        gap: 2rem;
     }
 }
 
